Fixed margins and spacings in case studies

--- a/src/index.css
+++ b/src/index.css
@@ -529,7 +529,7 @@ footer {
 .proj-content-container {
   display: flex;
   flex-direction:column;
-  gap: 1rem;
+  gap: 2rem;
   width: 100%; /* Ensure the container takes full width */
 }
 .proj-content-container .projPics {
@@ -700,12 +700,9 @@ footer {
 
 /* NEWLY ADDED */
 
-/* Adjust the existing styles and add new ones */
-
 .section-wrapper {
   display: flex;
   flex-direction: column;
-  margin-bottom: 2rem;
 }
 
 .section-heading {
@@ -714,6 +711,10 @@ footer {
 
 .section-content {
   width: 100%;
+}
+
+.section-wrapper p {
+  margin-top: 0;
 }
 
 .proj-content-container .projPics {
@@ -739,7 +740,7 @@ footer {
   }
 
   .section-heading {
-    width: 20%;
+    width: 15%;
     padding-right: 2rem;
     margin-bottom: 0;
   }
